// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanonicalAds Ads Snapshots should correctly render a Canonical mpu ad with dotcom-bootstrap script 1`] = `
<html>
  <head>
    <script
      src="https://gn-web-assets.api.bbc.com/ngas/test/dotcom-bootstrap.js"
      type="module"
    />
    <script
      nomodule="nomodule"
      src="https://gn-web-assets.api.bbc.com/ngas/test/dotcom-bootstrap-legacy.js"
    />
  </head>
  <body>
    .c0 {
  background-color: #F6F6F6;
  min-height: 15.625rem;
}

<div>
      <section
        aria-hidden="true"
        aria-label="Advertisement 2"
        class="c0"
        role="region"
      >
        <div
          class="dotcom-ad"
          id="dotcom-mpu"
        />
      </section>
    </div>
  </body>
</html>
`;

exports[`CanonicalAds Ads Snapshots should correctly render an Canonical leaderboard ad with dotcom-bootstrap script 1`] = `
.c0 {
  background-color: #F6F6F6;
  min-height: 5.5rem;
}

@media (min-width:63rem) {
  .c0 {
    min-height: 9rem;
  }
}

<html>
  <head>
    <script
      src="https://gn-web-assets.api.bbc.com/ngas/test/dotcom-bootstrap.js"
      type="module"
    />
    <script
      nomodule="nomodule"
      src="https://gn-web-assets.api.bbc.com/ngas/test/dotcom-bootstrap-legacy.js"
    />
  </head>
  <body>
    <div>
      <section
        aria-hidden="true"
        aria-label="Advertisement"
        class="c0"
        role="region"
      >
        <div
          class="dotcom-ad"
          id="dotcom-leaderboard"
        />
      </section>
    </div>
  </body>
</html>
`;
